Added Lincheck tests